# ENG_MinIO

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
airflow/: Dockerfile.airflow  entrypoint.sh
airflow/dags/: minio_list_dag.py
flask/: Dockerfile  main.py
minio/: Dockerfile.minio
streamlit/: Dockerfile.streamlit  app.py  combined.py
